--- a/ames-web-gui/src/de/kp/ames/web/public/ames.css
+++ b/ames-web-gui/src/de/kp/ames/web/public/ames.css
@@ -4,6 +4,7 @@ iframe {border:0;}
 
 /* project specific styles */
 
+.x-bd-style-0 {border:0;}
 .x-bd-style-1 {border:1px solid #C0C0C0;border-left:0;}
 .x-bd-style-2 {border-right:1px solid #C0C0C0;}
 
@@ -31,3 +32,6 @@ iframe {border:0;}
 .x-sc-text {font:normal 11px tahoma, arial, helvetica, sans-serif;color:#333333;} 
 
 .x-searchbox {background-color:#C6D3D3;border:0;}
+
+.x-tile-cell {font:normal 11px tahoma,arial,sans-serif;color:#f2f2f4;white-space:nowrap;cursor:pointer;}
+
