--- a/ames-web-gui/src/de/kp/ames/web/public/ames.css
+++ b/ames-web-gui/src/de/kp/ames/web/public/ames.css
@@ -1,5 +1,8 @@
 /* html oriented styles */
 
+/* Important style to avoid scrollbars in Chrome */
+body {overflow:hidden;}
+
 iframe {border:0;}
 
 /* project specific styles */
