--- a/ames-web-gui/war/de.kp.ames.web.ames/ames.css
+++ b/ames-web-gui/war/de.kp.ames.web.ames/ames.css
@@ -12,6 +12,7 @@ iframe {border:0;}
 .x-bd-style-2 {border-right:1px solid #C0C0C0;}
 .x-bd-style-3 {border-top:1px solid #C0C0C0;}
 .x-bd-style-4 {border:1px solid #C0C0C0;}
+.x-bd-style-5 {border-right:1px solid #C0C0C0;border-bottom:1px solid #C0C0C0;}
 
 .x-app-title {font:bold 10px tahoma, arial, helvetica, sans-serif;white-space:normal;color:#333333;text-align:center;padding-top:1px;}
 
